--- a/index.html
+++ b/index.html
@@ -70,14 +70,26 @@
     <section id="ueber-mich">
       <div class="card">
         <h2>Über mich</h2>
-        <p>Ich befinde mich derzeit in einer Umschulung zum Fachinformatiker für Anwendungsentwicklung (GFN Hannover). Mein Ziel ist es, praxisnahe Erfahrung zu sammeln und moderne Anwendungen zu entwickeln.</p>
-        <div class="list">
-          <span class="pill">HTML</span>
-          <span class="pill">CSS</span>
-          <span class="pill">Python</span>
-          <span class="pill">JavaScript</span>
-            <span class="pill">Java</span>
-        </div>
+        <p>Mein Name ist Sławomir Kozera und ich befinde mich derzeit in einer 
+      Umschulung zum <strong>Fachinformatiker für Anwendungsentwicklung</strong> 
+      bei der GFN in Hannover. Mein großes Ziel ist es, als 
+      <strong>Junior Developer</strong> in einem innovativen Unternehmen zu starten 
+      und meine Leidenschaft für Softwareentwicklung weiter auszubauen.</p>
+        <p>
+      Ich lege großen Wert auf sauberen, wartbaren Code und finde Freude daran, 
+      komplexe Probleme mit kreativen Lösungen zu meistern. Für mich ist es wichtig, 
+      in einem Team zu arbeiten, Erfahrungen auszutauschen und kontinuierlich dazuzulernen.
+    </p>
+    <div class="list">
+      <span class="pill">HTML</span>
+      <span class="pill">CSS</span>
+      <span class="pill">JavaScript</span>
+      <span class="pill">Python</span>
+      <span class="pill">Java</span>
+      <span class="pill">SQL</span>
+      <span class="pill">React (Grundlagen)</span>
+      <span class="pill">Django (Grundlagen)</span>
+       </div>
       </div>
     </section>
 
@@ -86,17 +98,49 @@
       <h2>Projekte</h2>
       <div class="grid grid-cols-3">
         <article class="card project">
-          <h3>Mini Landing Page</h3>
-          <p>Einfacher Onepager mit HTML und CSS, optimiert für Mobilgeräte.(In Arbeit)</p>
-          <a class="btn" href="#">Demo ansehen</a>
-          <a class="btn" href="#">Code auf GitHub</a>
-        </article>
+  <h3>Persönliches Portfolio</h3>
+  <p>
+    Meine eigene <strong>Portfolio-Website</strong>, die ich mit 
+    <strong>HTML, CSS und JavaScript</strong> entwickelt habe. 
+    Das Ziel war es, eine <strong>moderne und responsive Landing Page</strong> 
+    zu erstellen, die meine Projekte, Fähigkeiten und Kontaktdaten übersichtlich darstellt.
+  </p>
+  <a class="btn" href="index.html" target="_blank">Live ansehen</a>
+  <a class="btn" href="https://github.com/IsobarDesign/Porfolio" target="_blank">Code auf GitHub</a>
+</article>
         <article class="card project">
           <h3>Python Skript</h3>
           <p>Kleines Skript zur Datenanalyse mit Pandas und Matplotlib(In Arbeit).</p>
           <a class="btn" href="#">Demo ansehen</a>
           <a class="btn" href="#">Code auf GitHub</a>
         </article>
+        <article class="card project">
+  <h3>Expenses Calculator (Java)</h3>
+  <p>
+    Konsolen-App in Java zur Verwaltung von Ausgaben. 
+    Mit Maven strukturiert und durch Unit Tests abgesichert. 
+    Fokus: saubere Architektur & Test Driven Development.
+  </p>
+  <a class="btn" href="https://github.com/IsobarDesign/ExpensesCalculator" target="_blank">GitHub</a>
+</article>
+<article class="card project">
+  <h3>JavaScript Unit Tests Demo</h3>
+  <p>
+    Ein kleines Projekt in <strong>JavaScript</strong>, das demonstriert, 
+    wie <strong>Unit Tests</strong> mit dem Framework <strong>Jest</strong> 
+    geschrieben und ausgeführt werden. 
+    Anhand einer einfachen <code>math.js</code>-Datei habe ich 
+    grundlegende mathematische Funktionen implementiert und mit 
+    <code>math.test.js</code> die Tests dazu erstellt.
+  </p>
+  <p>
+    Das Projekt zeigt, wie wichtig Testautomatisierung im modernen 
+    Software Development ist. Ich habe dabei gelernt, 
+    wie man eine Node.js-Umgebung einrichtet, 
+    Abhängigkeiten mit <code>npm</code> verwaltet und 
+    Tests automatisiert durchführt.
+  </p>
+  <a class="btn" href="https://github.com/IsobarDesign/js-unit-tests-demo" target="_blank">Code auf GitHub</a>
       </div>
     </section>
 
@@ -108,7 +152,7 @@
         <div class="list">
           <a class="btn" href="mailto:slawomir.kozera1@gmail.com">E-Mail senden</a>
           <a class="btn" href="https://www.linkedin.com/in/slawomir-kozera-b2a59b161/" target="_blank">LinkedIn</a>
-          <a class="btn" href="https://https://github.com/IsobarDesign" target="_blank">GitHub</a>
+          <a class="btn" href="https://github.com/IsobarDesign" target="_blank">GitHub</a>
         </div>
       </div>
     </section>
