--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="de">
 <head>
-  <link rel="icon" href="favicon.png" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/png">
   <meta charset="utf-8">
   <title>Sławomir Kozera – Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
